WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255291
[WebGPU] MTLVertexDescriptor is not being correctly generated
https://bugs.webkit.org/show_bug.cgi?id=255291
Summary
[WebGPU] MTLVertexDescriptor is not being correctly generated
Mike Wyrzykowski
Reported
2023-04-11 10:10:54 PDT
Open
https://data.runhello.com/j/wgpu/1/
Note the validation error: Error Domain=CompilerError Code=2 "Vertex attribute in_color(1) is missing from the vertex descriptor" It would seem that: static MTLVertexDescriptor *createVertexDescriptor(WGPUVertexState vertexState) is not correctly implemented. The shader source appears correct.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-11 10:11:15 PDT
<
rdar://problem/107889041
>
Mike Wyrzykowski
Comment 2
2023-04-18 14:02:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12882
EWS
Comment 3
2023-04-18 16:32:54 PDT
Committed
263106@main
(7867b54b76dc): <
https://commits.webkit.org/263106@main
> Reviewed commits have been landed. Closing PR #12882 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug