[WebGPU] MTLVertexDescriptor is not being correctly generated https://bugs.webkit.org/show_bug.cgi?id=255291 <radar://107889041>

Reviewed by Myles C. Maxfield.

We should have indexed the array with 'shaderLocation' instead
of 'i', the latter of which will have the same value for the first
attributes of seperate buffers.

* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::createVertexDescriptor):

Canonical link: https://commits.webkit.org/263106@main